# napari-graph

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  sitemap.xml  tox.ini
.github/workflows/: build-docs.yml  deploy-docs.yml  test_and_deploy.yml
_static/: documentation_options.js
api/: api.html
docs/: Makefile  conf.py  index.md  make.bat
docs/api/: api.md
src/: benchmark_undirectedgraph.py  undirectedgraph.py
src/napari_graph/: __init__.py  _base_graph.py  base_graph.py  directed_graph.py  graph.py  interops.py  numba.py  undirected_graph.py
src/napari_graph/_tests/: test_graph.py  test_interops.py
