[metadata]
name = napari-graph
author = Jordão Bragantini, Jonas Windhager & Juan Nunez-Iglesias
author_email = jordao.bragantini@czbiohub.org
license = BSD-3
description = Fast editable graphs in Python and numba
url = https://github.com/napari/napari-graph
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
package_dir =
    =src
include_package_data = True
packages = find:
setup_requires = setuptools_scm
install_requires =
    networkx
    numba
    numpy
    pandas
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
testing =
    coverage
    pytest
    pytest-cov
docs =
    sphinx-material
    sphinx
    jupyter
    notebook
    sphinx-toggleprompt
    sphinx-copybutton
    sphinxcontrib-bibtex
    myst-nb
